# Embodied-Vision

./: justfile
backend/: .env.example  Dockerfile  go.mod
backend/cmd/: main.go
backend/internal/admin/: handler.go  service.go
backend/internal/auth/: handler.go  service.go
backend/internal/config/: config.go
backend/internal/db/: db.go
backend/internal/middleware/: auth.go
backend/internal/models/: user.go
backend/internal/token/: token.go
classifier/: __init__.py  cli.py  detector.py  features.py  pyproject.toml  sampler.py  scoring.py  video.py
client/: wrangler.jsonc
infra/: main.tf
output/bakery__bakery_01__clip/: report.json
pipeline/: Dockerfile  go.mod  go.sum
pipeline/cmd/pipeline/: main.go
pipeline/internal/classifier/: runner.go
pipeline/internal/downloader/: downloader.go
pipeline/internal/s3client/: client.go
pipeline/internal/uploader/: uploader.go
scripts/: deploy.sh
