[project]
name = "classifier"
version = "0.1.0"
description = "Egocentric hand-frame difficulty classifier"
requires-python = ">=3.10,<3.13"
dependencies = [
    "mediapipe>=0.10.14",
    "opencv-python>=4.10",
    "numpy>=1.26,<2.0",
    "pillow>=10.0",
]

[project.scripts]
classify-video = "classifier.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = ".."}
packages = ["classifier"]
